--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h2>ECET Registration Form</h2>
+  <h2>Telanga 2025</h2>
   <form id="ecetForm">
     <label>First Name: <input type="text" id="fname" required></label>
     <label>Last Name: <input type="text" id="lname" required></label>
@@ -18,6 +19,7 @@
         <option value="">Select</option>
         <option>Male</option>
         <option>Female</option>
+        <option>not prefer to say</option>
       </select>
     </label>
     <label>Address: <textarea id="address" required></textarea></label>
