--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <h2>ECET Registration Form</h2>
   <h2>Telanga 2025</h2>
+  <h2>welcome</h2>
   <form id="ecetForm">
     <label>First Name: <input type="text" id="fname" required></label>
     <label>Last Name: <input type="text" id="lname" required></label>
